...
            android:paddingEnd="0dp"
            android:src="@drawable/back_arrow"
            android:visibility="visible"
            android:contentDescription="@string/back_button" />

        <androidx.appcompat.widget.SearchView
            android:id="@+id/searchViewEdit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            app:iconifiedByDefault="false"
            android:clipToPadding="false"
            app:queryHint="@string/search_match"
...
